# TriToQuadMesh

./: CMakeLists.txt
OpenMesh-6.3/lib/: OpenMeshTools.lib  OpenMeshToolsd.lib
shaders/: simple_color.glsl  teapot.glsl
src/: CMakeLists.txt  blossom_quad.cpp  blossom_quad.h  geometrical_classes.cpp  geometrical_classes.h  graph_classes.cpp  graph_classes.h  gui.cpp  gui.h  helper.h  main.cpp  naiv.cpp  naiv.h
src/framework/: camera.cpp  camera.h  config.h  objLoader.cpp  objLoader.h  pngLoader.cpp  pngLoader.h  shaderManager.cpp  shaderManager.h  window.cpp  window.h
src/framework/imgui/: imconfig.h  imgui.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  imgui_orient.cpp  imgui_orient.h
